--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_830376_qzecyukz0s.css">
     <title>后台管理</title>
     <!-- iconfont -->
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1472230_wj00mbdz7kn.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1802875_ako6iqwpsrp.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1728467_tzhx1xvajh.css">
   </head>
   <body>
     <div id="app"></div>
