--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_830376_qzecyukz0s.css">
     <title>后台管理</title>
     <!-- iconfont -->
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1802875_ako6iqwpsrp.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1728467_tzhx1xvajh.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_2436919_xin5z53o59.css">
+    <!-- 高德地图 -->
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=4ef2c13f92d4791bd2b280596df00443&plugin=AMap.Autocomplete"></script>
   </head>
   <body>
     <div id="app"></div>
